Cleanup CSS, add visibility of maps, setting correct padding for header in small mode

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,10 +4,10 @@ body{
 }
 
 /* To allow scaling to large screens */
-/*.row {
+.row {
     max-width: 100%;
     max-height: 100%;
-}*/
+}
 
 /* Header ---------------------- */
 header{
@@ -16,6 +16,7 @@ header{
 
 div.headerbar{
 	margin-top:1em;
+	padding-left: 1em;
 	background-color: #33CCCC;
 }
 
@@ -26,6 +27,18 @@ div.menubar{
 	margin-bottom:0.5em; 
 	padding:0;
 }
+
+a.btn {
+  padding:0.2em;
+  margin:0;
+  display: block;
+  color: #ffffff;
+  background-color: #1B6666;
+  text-align:center;
+  width:100%;
+  height:100%;
+}
+
 
 /* Content ---------------------- */
 
@@ -46,7 +59,7 @@ img.centered {
     margin-right: auto;
 }
 
-div.map {
+iframe.map {
 	text-align: center;
 }
 
@@ -82,9 +95,9 @@ footer {
     visibility: hidden;}
 .clearfix {display: inline-block;}
 
-iframe {
+iframe#introlution {
 	width:100%;
-	height:50em;
+	height:60em;
 	border:none;
 }
 
